# pyfunflow

./: README.md  pyproject.toml
examples/: diagram.py  get_ftp_file.py  hello_world.py
pyfunflow/: __init__.py  batteries.py  core.py
pyfunflow/batteries/: __init__.py  control.py  diagram.py  ftp.py  log.py  runners.py  secret.py
tests/: test_batteries.py  test_core.py  test_diagram.py
